@@ -45,7 +45,7 @@ function openSelectWindow(theURL,winName,myWidth, myHeight, isCenter, formfield)
 	targetfield = formfield;
 	
 	okno = window.open(theURL,winName,'location=0,directories=0,scrollbars=no,toolbar=0,menubar=0,resizable=0,status=0,width='+myWidth+',height='+myHeight+',left=' + myLeft+ ',top=' + myTop);
-	
+
 	return false;
 }
 
@@ -106,6 +106,7 @@ function sendvalue(targetfield,value)
 	targetfield.value = value;
 	window.close();
 	parent.window.close();
+	targetfield.focus();
 }
 
 function showOrHide(elementslist)
