@@ -21,7 +21,6 @@
 {/if}
 {if $part eq "top"}
 <body>
-
 <form name="search" method="post" action="?m=choosecustomer&p=main" target="main">
 <input type="submit" class="hiddenbtn">
 <table cellpadding="5" width="100%">
