@@ -39,6 +39,12 @@
 	        document.setcustomer.submit();
 	}
 	
+	function reset_customer()
+        {
+	        if (document.setcustomer.customerid.value)
+	                document.setcustomer.customer.value = document.setcustomer.customerid.value;
+	}
+
 	function setType(type)
         {
 	        document.additem.elements[type].checked = !document.additem.elements[type].checked;
@@ -125,7 +131,7 @@
 			</SELECT>
 			{t}or Customer ID:{/t}
 			{/if}
-			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{else}{$invoice.customerid}{/if}" SIZE="5"{if $customers} onChange="document.setcustomer.customer.value=document.setcustomer.customerid.value"{/if} {tip text="Enter customer ID"}>
+			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{else}{$invoice.customerid}{/if}" SIZE="5"{if $customers} onChange="reset_customer()" onfocus="reset_customer()"{/if} {tip text="Enter customer ID"}>
 			<a href="javascript: void(0);" onClick="return customerchoosewin(document.setcustomer.customerid);" {tip text="Click to search customer"}>{t}Search{/t}&nbsp;&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
