@@ -19,7 +19,7 @@
 		document.save.action = "?m=invoicenote&action=save&print=1" + add;
 		document.save.submit();
 	}
-	{/literal}																								
+	{/literal}
 	//-->
 </script>		
 <FORM NAME="setheader" METHOD="POST" ACTION="?m=invoicenote&action=setheader">
