@@ -8,10 +8,16 @@
 	function saveheader()
 	{
 	        if(document.setcustomer.customer)
-	                if(document.setcustomer.customer.value != 0)
-	                        document.setcustomer.customerid.value = document.setcustomer.customer.value;
+			if(document.setcustomer.customer.value != 0)
+			        document.setcustomer.customerid.value = document.setcustomer.customer.value;
 	
 	        document.setcustomer.submit();
+	}
+
+	function reset_customer()
+        {
+	        if (document.setcustomer.customerid.value)
+	                document.setcustomer.customer.value = document.setcustomer.customerid.value;
 	}
 	
 	function printnote()
@@ -57,7 +63,7 @@
 			</SELECT>
 			{t}or Customer ID:{/t}
 			{/if}
-			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{else}{$note.customerid}{/if}" SIZE="5"{if $customers} onChange="document.setcustomer.customer.value=document.setcustomer.customerid.value"{/if} {tip text="Enter customer ID"}>
+			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{else}{$note.customerid}{/if}" SIZE="5"{if $customers} onChange="reset_customer()" onfocus="reset_customer()"{/if} {tip text="Enter customer ID"}>
 			<a href="javascript: void(0);" onClick="return customerchoosewin(document.setcustomer.customerid);" {tip text="Click to search customer"}>{t}Search{/t}&nbsp;&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
